# izulu

./: .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  .readthedocs.yaml  .taplo.toml  .yamllint.yaml  LICENSE  README.md  README.rst  README.tpl.rst  pyproject.toml  tox.ini
.github/workflows/: checks.yaml  publish-to-pypi.yaml  publish-to-pypi.yml  tests.yaml
docs/: requirements.txt
docs/source/: conf.py  contributors.rst  index.rst  ref.rst
docs/source/dev/: index.rst
docs/source/ref/: index.rst  internals.rst  reraising.rst  root.rst
docs/source/specs/: additional.rst  index.rst  mechanics.rst  pillars.rst  toggles.rst  validations.rst
docs/source/user/: index.rst  install.rst  intro.rst  quickstart.rst  recipes.rst
examples/: stock.py
izulu/: __init__.py  _reraise.py  _tools.py  _types.py  _utils.py  causes.py  root.py  tools.py
tests/: conftest.py  conftest.py_  errors.py  helpers.py  test_checks.py  test_dumping.py  test_error.py  test_features.py  test_init_subclass.py  test_root.py  test_stringification.py  test_utils.py
tests/error/: test_checks.py  test_dumping.py  test_error.py  test_factory.py  test_features.py  test_init_subclass.py  test_stringification.py  test_toggles.py
tests/reraise/: test_fatal.py
